---
source: core/src/parser/assembly/module.rs
assertion_line: 170
expression: module

---
source_filename = "a.7rcbfp3g-cgu.0"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%"unwind::libunwind::_Unwind_Context" = type { [0 x i8] }
%"unwind::libunwind::_Unwind_Exception" = type { [0 x i64], i64, [0 x i64], void (i32, %"unwind::libunwind::_Unwind_Exception"*)*, [0 x i64], [6 x i64], [0 x i64] }
%"std::fmt::Formatter" = type { [0 x i64], { i64, i64 }, [0 x i64], { i64, i64 }, [0 x i64], { {  }*, [3 x i64]* }, [0 x i32], i32, [0 x i32], i32, [0 x i8], i8, [7 x i8] }
%"core::fmt::Opaque" = type {  }
%"std::fmt::Arguments" = type { [0 x i64], { [0 x { [0 x i8]*, i64 }]*, i64 }, [0 x i64], { i64*, i64 }, [0 x i64], { [0 x { i8*, i64* }]*, i64 }, [0 x i64] }
@alloc1 = private unnamed_addr constant <{ [12 x i8] }> <{ [12 x i8] c"hello world " }>, align 1
@alloc3 = private unnamed_addr constant <{ [1 x i8] }> <{ [1 x i8] c"\0a" }>, align 1
@alloc2 = private unnamed_addr constant <{ i8*, [8 x i8], i8*, [8 x i8] }> <{ i8* getelementptr inbounds (<{ [12 x i8] }>, <{ [12 x i8] }>* @alloc1, i32 0, i32 0, i32 0), [8 x i8] c"\0c\00\00\00\00\00\00\00", i8* getelementptr inbounds (<{ [1 x i8] }>, <{ [1 x i8] }>* @alloc3, i32 0, i32 0, i32 0), [8 x i8] c"\01\00\00\00\00\00\00\00" }>, align 8
@vtable.0 = private unnamed_addr constant { void (i64**)*, i64, i64, i32 (i64**)*, i32 (i64**)*, i32 (i64**)* } { void (i64**)* @"_ZN4core3ptr85drop_in_place$LT$std..rt..lang_start$LT$$LP$$RP$$GT$..$u7b$$u7b$closure$u7d$$u7d$$GT$17h6be9283ec94d764bE", i64 8, i64 8, i32 (i64**)* @"_ZN3std2rt10lang_start28_$u7b$$u7b$closure$u7d$$u7d$17hc67b0eba1738ef88E", i32 (i64**)* @"_ZN3std2rt10lang_start28_$u7b$$u7b$closure$u7d$$u7d$17hc67b0eba1738ef88E", i32 (i64**)* @"_ZN4core3ops8function6FnOnce40call_once$u7b$$u7b$vtable.shim$u7d$$u7d$17h725d331cbdf52b97E" }, align 8

define internal dso_preemptable default void @_ZN3std10sys_common9backtrace28__rust_begin_short_backtrace17h13e4c9fb412d8cd3E(void ()* nonnull %f) unnamed_addr #0 personality i32 (i32, i32, i64, %"unwind::libunwind::_Unwind_Exception"*, %"unwind::libunwind::_Unwind_Context"*)* @rust_eh_personality {
start:
    %0 = alloca { i8*, i32 }, i32 1, align 8
    call void @_ZN4core3ops8function6FnOnce9call_once17h0e260f21abdcbbd2E(void ()* nonnull %f) 
    br label %bb1
bb1:
    invoke void @_ZN4core4hint9black_box17h9ef81826e68d7cfcE() to label %bb2 unwind label %cleanup
bb2:
    ret void
bb3:
    br label %bb4
bb4:
    %1 = bitcast { i8*, i32 }* %0 to i8**
    %2 = load i8*, i8** %1, align 8
    %3 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %0, i32 0, i32 1
    %4 = load i32, i32* %3, align 8
    %5 = insertvalue { i8*, i32 } undef, i8* %2, 0
    %6 = insertvalue { i8*, i32 } %5, i32 %4, 1
    resume { i8*, i32 } %6
cleanup:
    %7 = landingpad { i8*, i32 } cleanup
    %8 = extractvalue { i8*, i32 } %7, 0
    %9 = extractvalue { i8*, i32 } %7, 1
    %10 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %0, i32 0, i32 0
    store i8* %8, i8** %10, align 8
    %11 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %0, i32 0, i32 1
    store i32 %9, i32* %11, align 8
    br label %bb3
}

define external dso_preemptable hidden i64 @_ZN3std2rt10lang_start17hcb2f752272cf159dE(void ()* nonnull %main, i64 %argc, i8** %argv) unnamed_addr #1 {
start:
    %_7 = alloca i64*, i32 1, align 8
    %0 = bitcast i64** %_7 to void ()**
    store void ()* %main, void ()** %0, align 8
    %_4.0 = bitcast i64** %_7 to {  }*
    %1 = call i64 @_ZN3std2rt19lang_start_internal17h12392519f60c6396E({  }* nonnull align 1 %_4.0, [3 x i64]* noalias readonly align 8 dereferenceable(24) bitcast ({ void (i64**)*, i64, i64, i32 (i64**)*, i32 (i64**)*, i32 (i64**)* }* @vtable.0 to [3 x i64]*), i64 %argc, i8** %argv) 
    br label %bb1
bb1:
    ret i64 %1
}

define internal dso_preemptable default i32 @_ZN3std2rt10lang_start28_$u7b$$u7b$closure$u7d$$u7d$17hc67b0eba1738ef88E(i64** noalias readonly align 8 dereferenceable(8) %_1) unnamed_addr #2 {
start:
    %0 = bitcast i64** %_1 to void ()**
    %_3 = load void ()*, void ()** %0, align 8
    call void @_ZN3std10sys_common9backtrace28__rust_begin_short_backtrace17h13e4c9fb412d8cd3E(void ()* nonnull %_3) 
    br label %bb1
bb1:
    %1 = call i32 @"_ZN54_$LT$$LP$$RP$$u20$as$u20$std..process..Termination$GT$6report17h373167016b4590a3E"() 
    br label %bb2
bb2:
    ret i32 %1
}

define internal dso_preemptable default i32 @_ZN3std3sys4unix7process14process_common8ExitCode6as_i3217he8470c6c71b86d09E(i8* noalias readonly align 1 dereferenceable(1) %self) unnamed_addr #2 {
start:
    %_2 = load i8, i8* %self, align 1
    %0 = zext i8 %_2 to i32
    ret i32 %0
}

define internal dso_preemptable default { i8*, i64* } @_ZN4core3fmt10ArgumentV13new17haeda942aa9336562E(i32* noalias readonly align 4 dereferenceable(4) %x, i1 (i32*, %"std::fmt::Formatter"*)* nonnull %f) unnamed_addr #1 {
start:
    %0 = alloca %"core::fmt::Opaque"*, i32 1, align 8
    %1 = alloca i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)*, i32 1, align 8
    %2 = alloca { i8*, i64* }, i32 1, align 8
    %3 = bitcast i1 (i32*, %"std::fmt::Formatter"*)* %f to i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)*
    store i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)* %3, i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)** %1, align 8
    %_3 = load i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)*, i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)** %1, align 8
    br label %bb1
bb1:
    %4 = bitcast i32* %x to %"core::fmt::Opaque"*
    store %"core::fmt::Opaque"* %4, %"core::fmt::Opaque"** %0, align 8
    %_5 = load %"core::fmt::Opaque"*, %"core::fmt::Opaque"** %0, align 8
    br label %bb2
bb2:
    %5 = bitcast { i8*, i64* }* %2 to %"core::fmt::Opaque"**
    store %"core::fmt::Opaque"* %_5, %"core::fmt::Opaque"** %5, align 8
    %6 = getelementptr inbounds { i8*, i64* }, { i8*, i64* }* %2, i32 0, i32 1
    %7 = bitcast i64** %6 to i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)**
    store i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)* %_3, i1 (%"core::fmt::Opaque"*, %"std::fmt::Formatter"*)** %7, align 8
    %8 = getelementptr inbounds { i8*, i64* }, { i8*, i64* }* %2, i32 0, i32 0
    %9 = load i8*, i8** %8, align 8
    %10 = getelementptr inbounds { i8*, i64* }, { i8*, i64* }* %2, i32 0, i32 1
    %11 = load i64*, i64** %10, align 8
    %12 = insertvalue { i8*, i64* } undef, i8* %9, 0
    %13 = insertvalue { i8*, i64* } %12, i64* %11, 1
    ret { i8*, i64* } %13
}

define internal dso_preemptable default void @_ZN4core3fmt9Arguments6new_v117he6f7a0435a4ddfe0E(%"std::fmt::Arguments"* noalias nocapture sret(%"std::fmt::Arguments") dereferenceable(48) %0, [0 x { [0 x i8]*, i64 }]* noalias nonnull readonly align 8 %pieces.0, i64 %pieces.1, [0 x { i8*, i64* }]* noalias nonnull readonly align 8 %args.0, i64 %args.1) unnamed_addr #2 {
start:
    %_4 = alloca { i64*, i64 }, i32 1, align 8
    %1 = bitcast { i64*, i64 }* %_4 to {  }**
    store {  }* null, {  }** %1, align 8
    %2 = bitcast %"std::fmt::Arguments"* %0 to { [0 x { [0 x i8]*, i64 }]*, i64 }*
    %3 = getelementptr inbounds { [0 x { [0 x i8]*, i64 }]*, i64 }, { [0 x { [0 x i8]*, i64 }]*, i64 }* %2, i32 0, i32 0
    store [0 x { [0 x i8]*, i64 }]* %pieces.0, [0 x { [0 x i8]*, i64 }]** %3, align 8
    %4 = getelementptr inbounds { [0 x { [0 x i8]*, i64 }]*, i64 }, { [0 x { [0 x i8]*, i64 }]*, i64 }* %2, i32 0, i32 1
    store i64 %pieces.1, i64* %4, align 8
    %5 = getelementptr inbounds %"std::fmt::Arguments", %"std::fmt::Arguments"* %0, i32 0, i32 3
    %6 = getelementptr inbounds { i64*, i64 }, { i64*, i64 }* %_4, i32 0, i32 0
    %7 = load i64*, i64** %6, align 8
    %8 = getelementptr inbounds { i64*, i64 }, { i64*, i64 }* %_4, i32 0, i32 1
    %9 = load i64, i64* %8, align 8
    %10 = getelementptr inbounds { i64*, i64 }, { i64*, i64 }* %5, i32 0, i32 0
    store i64* %7, i64** %10, align 8
    %11 = getelementptr inbounds { i64*, i64 }, { i64*, i64 }* %5, i32 0, i32 1
    store i64 %9, i64* %11, align 8
    %12 = getelementptr inbounds %"std::fmt::Arguments", %"std::fmt::Arguments"* %0, i32 0, i32 5
    %13 = getelementptr inbounds { [0 x { i8*, i64* }]*, i64 }, { [0 x { i8*, i64* }]*, i64 }* %12, i32 0, i32 0
    store [0 x { i8*, i64* }]* %args.0, [0 x { i8*, i64* }]** %13, align 8
    %14 = getelementptr inbounds { [0 x { i8*, i64* }]*, i64 }, { [0 x { i8*, i64* }]*, i64 }* %12, i32 0, i32 1
    store i64 %args.1, i64* %14, align 8
    ret void
}

define internal dso_preemptable default i32 @_ZN4core3ops8function6FnOnce40call_once$u7b$$u7b$vtable.shim$u7d$$u7d$17h725d331cbdf52b97E(i64** %_1) unnamed_addr #2 {
start:
    %_2 = alloca {  }, i32 1, align 1
    %0 = load i64*, i64** %_1, align 8
    %1 = call i32 @_ZN4core3ops8function6FnOnce9call_once17h5211a6e5b636e728E(i64* nonnull %0) 
    br label %bb1
bb1:
    ret i32 %1
}

define internal dso_preemptable default void @_ZN4core3ops8function6FnOnce9call_once17h0e260f21abdcbbd2E(void ()* nonnull %_1) unnamed_addr #2 {
start:
    %_2 = alloca {  }, i32 1, align 1
    call void %_1() 
    br label %bb1
bb1:
    ret void
}

define internal dso_preemptable default i32 @_ZN4core3ops8function6FnOnce9call_once17h5211a6e5b636e728E(i64* nonnull %0) unnamed_addr #2 personality i32 (i32, i32, i64, %"unwind::libunwind::_Unwind_Exception"*, %"unwind::libunwind::_Unwind_Context"*)* @rust_eh_personality {
start:
    %1 = alloca { i8*, i32 }, i32 1, align 8
    %_2 = alloca {  }, i32 1, align 1
    %_1 = alloca i64*, i32 1, align 8
    store i64* %0, i64** %_1, align 8
    %2 = invoke i32 @"_ZN3std2rt10lang_start28_$u7b$$u7b$closure$u7d$$u7d$17hc67b0eba1738ef88E"(i64** noalias readonly align 8 dereferenceable(8) %_1) to label %bb1 unwind label %cleanup
bb1:
    br label %bb2
bb2:
    ret i32 %2
bb3:
    br label %bb4
bb4:
    %3 = bitcast { i8*, i32 }* %1 to i8**
    %4 = load i8*, i8** %3, align 8
    %5 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %1, i32 0, i32 1
    %6 = load i32, i32* %5, align 8
    %7 = insertvalue { i8*, i32 } undef, i8* %4, 0
    %8 = insertvalue { i8*, i32 } %7, i32 %6, 1
    resume { i8*, i32 } %8
cleanup:
    %9 = landingpad { i8*, i32 } cleanup
    %10 = extractvalue { i8*, i32 } %9, 0
    %11 = extractvalue { i8*, i32 } %9, 1
    %12 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %1, i32 0, i32 0
    store i8* %10, i8** %12, align 8
    %13 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %1, i32 0, i32 1
    store i32 %11, i32* %13, align 8
    br label %bb3
}

define internal dso_preemptable default void @_ZN4core3ptr85drop_in_place$LT$std..rt..lang_start$LT$$LP$$RP$$GT$..$u7b$$u7b$closure$u7d$$u7d$$GT$17h6be9283ec94d764bE(i64** %_1) unnamed_addr #2 {
start:
    ret void
}

define internal dso_preemptable default void @_ZN4core4hint9black_box17h9ef81826e68d7cfcE() unnamed_addr #2 {
start:
    %dummy = alloca {  }, i32 1, align 1
    call void asm sideeffect "", "r,~{memory},~{dirflag},~{fpsr},~{flags}"({  }* %dummy) 
    ret void
}

define internal dso_preemptable default i32 @_ZN54_$LT$$LP$$RP$$u20$as$u20$std..process..Termination$GT$6report17h373167016b4590a3E() unnamed_addr #2 {
start:
    %0 = call i32 @"_ZN68_$LT$std..process..ExitCode$u20$as$u20$std..process..Termination$GT$6report17h586c5791224f686bE"(i8 0) 
    br label %bb1
bb1:
    ret i32 %0
}

define internal dso_preemptable default i32 @_ZN68_$LT$std..process..ExitCode$u20$as$u20$std..process..Termination$GT$6report17h586c5791224f686bE(i8 %0) unnamed_addr #2 {
start:
    %self = alloca i8, i32 1, align 1
    store i8 %0, i8* %self, align 1
    %1 = call i32 @_ZN3std3sys4unix7process14process_common8ExitCode6as_i3217he8470c6c71b86d09E(i8* noalias readonly align 1 dereferenceable(1) %self) 
    br label %bb1
bb1:
    ret i32 %1
}

define internal dso_preemptable default i32 @_ZN1a1f17h2adf0efcb5ff6894E() unnamed_addr #1 {
start:
    ret i32 123
}

define internal dso_preemptable default void @_ZN1a4main17h2f11f58c70c1d210E() unnamed_addr #1 {
start:
    %_12 = alloca i32, i32 1, align 4
    %_10 = alloca i32*, i32 1, align 8
    %_9 = alloca [1 x { i8*, i64* }], i32 1, align 8
    %_2 = alloca %"std::fmt::Arguments", i32 1, align 8
    %0 = call i32 @_ZN1a1f17h2adf0efcb5ff6894E() 
    store i32 %0, i32* %_12, align 4
    br label %bb1
bb1:
    store i32* %_12, i32** %_10, align 8
    %arg0 = load i32*, i32** %_10, align 8
    %1 = call { i8*, i64* } @_ZN4core3fmt10ArgumentV13new17haeda942aa9336562E(i32* noalias readonly align 4 dereferenceable(4) %arg0, i1 (i32*, %"std::fmt::Formatter"*)* nonnull @"_ZN4core3fmt3num3imp52_$LT$impl$u20$core..fmt..Display$u20$for$u20$i32$GT$3fmt17he4610f81b6d3fde2E") 
    %_14.0 = extractvalue { i8*, i64* } %1, 0
    %_14.1 = extractvalue { i8*, i64* } %1, 1
    br label %bb2
bb2:
    %2 = bitcast [1 x { i8*, i64* }]* %_9 to { i8*, i64* }*
    %3 = getelementptr inbounds { i8*, i64* }, { i8*, i64* }* %2, i32 0, i32 0
    store i8* %_14.0, i8** %3, align 8
    %4 = getelementptr inbounds { i8*, i64* }, { i8*, i64* }* %2, i32 0, i32 1
    store i64* %_14.1, i64** %4, align 8
    %_6.0 = bitcast [1 x { i8*, i64* }]* %_9 to [0 x { i8*, i64* }]*
    call void @_ZN4core3fmt9Arguments6new_v117he6f7a0435a4ddfe0E(%"std::fmt::Arguments"* noalias nocapture sret(%"std::fmt::Arguments") dereferenceable(48) %_2, [0 x { [0 x i8]*, i64 }]* noalias nonnull readonly align 8 bitcast (<{ i8*, [8 x i8], i8*, [8 x i8] }>* @alloc2 to [0 x { [0 x i8]*, i64 }]*), i64 2, [0 x { i8*, i64* }]* noalias nonnull readonly align 8 %_6.0, i64 1) 
    br label %bb3
bb3:
    call void @_ZN3std2io5stdio6_print17h1203ca2abdf22dfaE(%"std::fmt::Arguments"* noalias nocapture dereferenceable(48) %_2) 
    br label %bb4
bb4:
    ret void
}

declare external dso_preemptable default i32 @rust_eh_personality(i32 %0, i32 %1, i64 %2, %"unwind::libunwind::_Unwind_Exception"* %3, %"unwind::libunwind::_Unwind_Context"* %4) unnamed_addr #3 

declare external dso_preemptable default i64 @_ZN3std2rt19lang_start_internal17h12392519f60c6396E({  }* nonnull align 1 %0, [3 x i64]* noalias readonly align 8 dereferenceable(24) %1, i64 %2, i8** %3) unnamed_addr #1 

declare external dso_preemptable default zeroext i1 @_ZN4core3fmt3num3imp52_$LT$impl$u20$core..fmt..Display$u20$for$u20$i32$GT$3fmt17he4610f81b6d3fde2E(i32* noalias readonly align 4 dereferenceable(4) %0, %"std::fmt::Formatter"* align 8 dereferenceable(64) %1) unnamed_addr #1 

declare external dso_preemptable default void @_ZN3std2io5stdio6_print17h1203ca2abdf22dfaE(%"std::fmt::Arguments"* noalias nocapture dereferenceable(48) %0) unnamed_addr #1 

define external dso_preemptable default i32 @main(i32 %0, i8** %1) unnamed_addr #4 {
top:
    %2 = sext i32 %0 to i64
    %3 = call i64 @_ZN3std2rt10lang_start17hcb2f752272cf159dE(void ()* @_ZN1a4main17h2f11f58c70c1d210E, i64 %2, i8** %1) 
    %4 = trunc i64 %3 to i32
    ret i32 %4
}

attributes #0 = { noinline nonlazybind uwtable "probe-stack"="__rust_probestack" "target-cpu"="x86-64" }
attributes #2 = { inlinehint nonlazybind uwtable "probe-stack"="__rust_probestack" "target-cpu"="x86-64" }
attributes #4 = { nonlazybind "target-cpu"="x86-64" }
attributes #1 = { nonlazybind uwtable "probe-stack"="__rust_probestack" "target-cpu"="x86-64" }
attributes #3 = { nounwind nonlazybind uwtable "probe-stack"="__rust_probestack" "target-cpu"="x86-64" }
!2 = !{i32 2, !"RtLibUseGOT", i32 1}
!0 = !{i32 7, !"PIC Level", i32 2}
!llvm.module.flags = !{!0, !1, !2}
!3 = !{}
!4 = !{i32 2849383}
!1 = !{i32 7, !"PIE Level", i32 2}

